src/components/vehicleCard/vehicleCard.module.css
.card {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  max-width: calc((100% / 3.08));
  flex-shrink: 0;
  border: var(--border-size-1) solid var(--gray-6);
  border-radius: var(--radius-conditional-1);
  /* background-image: var(--gradient-4), var(--noise-3); */
  padding-top: var(--size-8);
  box-shadow: var(--shadow-3);
}

.cardImages img {
  width: 100%;
  flex-shrink: 0;
}

.cardImages {
  display: flex;
  flex-direction: row;
  position: relative;
}

.imgContainer {
  display: flex;
  position: relative;
  left: 0;
  flex-wrap: nowrap;
  transition: left 0.2s ease-in-out;
}

.info {
  padding: var(--size-5);
}

.year {
  margin-bottom: 0;
}

.model {
  margin-top: var(--size-1);
  font-size: var(--font-size-fluid-1);
  font-weight: var(--font-weight-7);
  font-family: var(--font-mono);
}

.priceContainer {
  display: flex;
  flex-direction: row;
  gap: 30px;
  
}

.day p, .week p {
  margin-top: 0;
  font-size: var(--font-size-fluid-1);
  font-weight: var(--font-weight-3);
  line-height: 0.8
}

.priceText {
  font-size: var(--font-size-1);
}

.infoList ul {
  padding-left: 20px;
}

